# aie4_rag

./: LICENSE  Pythonic_RAG_Assignment.ipynb  README.md  pyproject.toml
